# mpv-kt

./: .gitignore  Cargo.toml  LICENSE  README.md  build.gradle.kts  flake.nix  gradle.properties  settings.gradle.kts  test.main.kts
.teamcity/: pom.xml  settings.kts
build-logic/: build.gradle.kts
build-logic/src/main/kotlin/: ProjectConfig.kt  base-kotlin.gradle.kts  base-publish.gradle.kts  mpv-android-app.gradle.kts  mpv-android-lib.gradle.kts  mpv-base.gradle.kts  mpv-kmp.gradle.kts
buildSrc/: build.gradle.kts
compose/: build.gradle.kts
compose/examples/android/: build.gradle.kts
compose/examples/desktop/: build.gradle.kts
compose/examples/simple/android/: build.gradle.kts
compose/examples/simple/desktop/: build.gradle.kts
compose/examples/simple/shared/: build.gradle.kts
examples/android/: build.gradle.kts
examples/android/src/main/: AndroidManifest.xml
ffm/: build.gradle.kts
gradle/: libs.versions.toml
lib/: build.gradle.kts
lib/android-tests/: build.gradle.kts
lib/natives/android/: build.gradle.kts
lib/natives/desktop/: build.gradle.kts  flake.nix  meson.options
lib/natives/desktop/nix/: mpv-config.nix
lib/src/jvmTest/resources/: logback.xml
mpv-kt/: build.gradle.kts
mpv-kt/android-tests/: build.gradle.kts
mpv-kt/examples/android/: build.gradle.kts
mpv-kt/natives/android/: build.gradle.kts
mpv-kt/natives/desktop/: .gitignore  build.gradle.kts  flake.nix
mpv-kt/natives/desktop/subprojects.tpl/linux/packagefiles/mpv/subprojects/packagefiles/ffmpeg/: collect_versions.sh  meson.build
natives/: Cargo.toml  flake.nix  meson.build  test.main.kts
natives/android/: build.gradle.kts
natives/android/src/androidTest/kotlin/dev/silenium/libs/mpv/android/: LoadingTest.kt
natives/desktop/: .gitignore  build.gradle.kts
natives/desktop/hack/: assemble-deps.sh
natives/desktop/nix/: linux-sources.nix
natives/desktop/subprojects.tpl/linux/packagefiles/mpv/subprojects/: expat.wrap  ffmpeg.wrap  fribidi.wrap
natives/desktop/subprojects.tpl/linux/packagefiles/mpv/subprojects/packagefiles/fmt/: pic.patch
natives/desktop/subprojects.tpl/linux/packagefiles/mpv/subprojects/packagefiles/libass/subprojects/packagefiles/libfontconfig/subprojects/: gperf.wrap
natives/desktop/subprojects.tpl/linux/packagefiles/mpv/subprojects/packagefiles/libjpeg-turbo/simd/: meson.build
natives/desktop/subprojects.tpl/linux/packagefiles/mpv/subprojects/packagefiles/libjpeg-turbo/simd/arm/: meson.build
natives/desktop/subprojects.tpl/windows/packagefiles/mpv/: meson.build
natives/nix/: mpv-config.nix
natives/src/: core.rs  errors.rs  handle.rs  lib.rs  macros.rs  meson.build  mpv.rs
natives/src/alloc/: mod.rs
natives/src/events/: callback.rs  client_message.rs  command_reply.rs  end_file.rs  hook.rs  log_message.rs  mod.rs  property.rs  start_file.rs  types.rs
natives/src/ffi/: mod.rs
natives/src/helper/: JniCallRef.hpp  JniMpvCallback.cpp  JniMpvCallback.hpp  MpvCallback.hpp  results.cpp  results.hpp
natives/src/jni/: commands.cpp  lifecycle.cpp  observe.cpp  properties_async.cpp  properties_sync.cpp  render.cpp
natives/src/jni_bindings/: mod.rs  tests.rs
natives/src/jni_bindings/types/: mod.rs  node.rs  utils.rs
natives/src/mpv/: MPV_.cpp  commands.cpp  events.cpp  instance.cpp  instance.hpp  nodes.cpp  nodes.hpp  observe.cpp  platform.hpp  platform_linux.cpp  platform_windows.cpp  properties_async.cpp  properties_sync.cpp  renderer.cpp  renderer.hpp
natives/src/nodes/: mod.rs  node.rs
natives/src/test_utils/: mod.rs
natives/src/types/: COPY_NOTICE  basics.rs  byte_array.rs  errors.rs  mod.rs  node.rs  node_array.rs  node_map.rs  tests.rs  traits.rs
natives/src/util/: Errors.cpp  MPVException.cpp  MPVException.hpp
natives/subprojects/: jni-headers.wrap
natives/subprojects.tpl/linux/packagefiles/mpv/subprojects/: harfbuzz.wrap  libdbus.wrap.disabled  zlib.wrap
src/: core.rs  lib.rs  mpv.rs
src/events/: types.rs
src/main/java/: module-info.java
src/test/resources/: logback.xml
(+134 files in other folders)
